--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,18 +28,23 @@
 
   <body>
     <header>
-      <div class="logodepan">
-        <h1>MOMO</h1>
-      </div>
-
       <nav>
+        <div class="logodepan">
+          <img src="assets/logo.png" alt="">
+        </div>
+
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#order">Order</a></li>
           <li><a href="#product">Product</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+
+        <div class="burger">
+          <span class="material-symbols-outlined"> menu </span>
+        </div>
       </nav>
     </header>
 
@@ -49,32 +58,39 @@
       </div>
 
       <!-- About -->
-      <div class="about" id="about"></div>
+      <!-- <div class="about" id="about"></div> -->
       <!-- Product -->
-      <div class="product" id="product"></div>
+      <!-- <div class="product" id="product"></div> -->
       <!-- Service -->
-      <div class="gallery" id="gallery"></div>
+      <!-- <div class="gallery" id="gallery"></div> -->
       <!-- Contact -->
-      <div class="contact" id="contact"></div>
+      <!-- <div class="contact" id="contact"></div> -->
 
-      <div class="about">
-        <img src="image2.png" alt="" />
-        <h1>ABOUT</h1>
-        <p>
-          Geprek Momo menyajikan masakan khas Indonesia dengan sentuhan citarasa
-          asia yang terbuat dari daging ayam yang digoreng krispi dan dicampur
-          dengan bumbu geprek yang pedas.
-        </p>
-        <br />
-        <p>
-          Geprek Momo menggunakan bahan-bahan berkualitas dan segar serta
-          memastikan proses pembuatan makanan hygienis. Menu kami meliputi
-          berbagai pilihan ayam geprek dengan tingkat kepedasan yang bisa
-          disesuaikan dengan selera.
-        </p>
+      <div class="about" id="about">
+          <h1>ABOUT</h1>
+          <div class="container">
+            
+            <p>
+              <br>
+              Geprek Momo menyajikan masakan khas Indonesia dengan sentuhan citarasa
+              asia yang terbuat dari daging ayam yang digoreng krispi dan dicampur
+              dengan bumbu geprek yang pedas.
+              <br>
+              <br>
+              Geprek Momo menggunakan bahan-bahan berkualitas dan segar serta
+              memastikan proses pembuatan makanan hygienis. Menu kami meliputi
+              berbagai pilihan ayam geprek dengan tingkat kepedasan yang bisa
+              disesuaikan dengan selera.            
+              <img src="image2.png" alt="imager" />
+            </p>
+            </div>
+        </div>
+
+      <div class="clear">
+        
       </div>
 
-      <div class="order">
+      <div class="order" id="order">
         <h1>
           HOW TO ORDER ONLINE <br />
           <img src="keranjang.png" alt="" />
@@ -91,7 +107,7 @@
         </h1>
       </div>
 
-      <div class="menu">
+      <div class="menu" id="product">
         <h1>PRODUCT</h1>
         <section class="product">
           <div class="item">
@@ -144,7 +160,7 @@
         </section>
       </div>
 
-      <div class="gallery">
+      <div class="gallery" id="gallery">
         <h1>Gallery</h1>
 
         <div class="isiGallery">
@@ -166,7 +182,7 @@
         </div>
       </div>
 
-      <footer class="foot">
+      <footer class="foot" id="contact">
         <div class="part1">
           <h2>MOMO</h2>
           <br />
@@ -206,8 +222,6 @@
           <p>Monday - Sunday</p>
           <p>09.00 AM - 21.00 PM</p>
         </div>
-
-        <!-- hahahaahah -->
       </footer>
     </main>
   </body>
