--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       <div class="about" id="about">
           <h1>ABOUT</h1>
           <div class="container">
-            
             <p>
               <br>
               Geprek Momo menyajikan masakan khas Indonesia dengan sentuhan citarasa
@@ -81,7 +80,7 @@
               memastikan proses pembuatan makanan hygienis. Menu kami meliputi
               berbagai pilihan ayam geprek dengan tingkat kepedasan yang bisa
               disesuaikan dengan selera.            
-              <img src="image2.png" alt="imager" />
+              <img src="assets/image2.png" alt="imager" />
             </p>
             </div>
         </div>
@@ -93,10 +92,10 @@
       <div class="order" id="order">
         <h1>
           HOW TO ORDER ONLINE <br />
-          <img src="keranjang.png" alt="" />
-          <img src="kartu.png" alt="" />
-          <img src="motor.png" alt="" />
-          <img src="ayam.png" alt="" />
+          <img src="assets/keranjang.png" alt="" />
+          <img src="assets/kartu.png" alt="" />
+          <img src="assets/motor.png" alt="" />
+          <img src="assets/ayam.png" alt="" />
 
           <div class="deskripsi">
             <p class="judul">01. Add Items to Your Cart</p>
@@ -111,49 +110,49 @@
         <h1>PRODUCT</h1>
         <section class="product">
           <div class="item">
-            <img src="item1.webp" alt="" />
+            <img src="assets/item1.webp" alt="" />
             <h4>Paket Komplit 1</h4>
             <p>IDR 25K</p>
           </div>
 
           <div class="item">
-            <img src="item2.webp" alt="" />
+            <img src="assets/item2.webp" alt="" />
             <h4>Paket Komplit 2</h4>
             <p>IDR 25K</p>
           </div>
 
           <div class="item">
-            <img src="item3.webp" alt="" />
+            <img src="assets/item3.webp" alt="" />
             <h4>Geprek Rica-rica + Nasi</h4>
             <p>IDR 16K</p>
           </div>
 
           <div class="item">
-            <img src="item4.webp" alt="" />
+            <img src="assets/item4.webp" alt="" />
             <h4>Geprek Rica-rica</h4>
             <p>IDR 13K</p>
           </div>
 
           <div class="item">
-            <img src="item5.webp" alt="" />
+            <img src="assets/item5.webp" alt="" />
             <h4>Geprek Terasi + Nasi</h4>
             <p>IDR 16K</p>
           </div>
 
           <div class="item">
-            <img src="item6.webp" alt="" />
+            <img src="assets/item6.webp" alt="" />
             <h4>Geprek Terasi</h4>
             <p>IDR 13K</p>
           </div>
 
           <div class="item">
-            <img src="item7.webp" alt="" />
+            <img src="assets/item7.webp" alt="" />
             <h4>Geprek Cheese + Nasi</h4>
             <p>IDR 17K</p>
           </div>
 
           <div class="item">
-            <img src="item8.webp" alt="" />
+            <img src="assets/item8.webp" alt="" />
             <h4>Geprek Cheese</h4>
             <p>IDR 14K</p>
           </div>
@@ -165,19 +164,19 @@
 
         <div class="isiGallery">
           <div class="kolom">
-            <img src="gallery3.png" alt="gallery3" />
-            <img src="gallery4.png" alt="gallery4" />
+            <img src="assets/gallery3.png" alt="gallery3" />
+            <img src="assets/gallery4.png" alt="gallery4" />
           </div>
 
           <div class="kolom">
-            <img src="gallery5.png" alt="gallery5" />
-            <img src="gallery1.png" alt="gallery1" />
-            <img src="gallery6.png" alt="gallery6" />
+            <img src="assets/gallery5.png" alt="gallery5" />
+            <img src="assets/gallery1.png" alt="gallery1" />
+            <img src="assets/gallery6.png" alt="gallery6" />
           </div>
 
           <div class="kolom">
-            <img src="gallery2.png" alt="gallery2" />
-            <img src="gallery7.png" alt="gallery7" />
+            <img src="assets/gallery2.png" alt="gallery2" />
+            <img src="assets/gallery7.png" alt="gallery7" />
           </div>
         </div>
       </div>
@@ -202,17 +201,17 @@
           <h2>Follow Us</h2>
           <br />
           <a href="https://www.instagram.com/ayamgeprekmomo/">
-            <img src="ig.png" alt="" />
+            <img src="assets/ig.png" alt="" />
           </a>
           <a
             href="https://gofood.co.id/pontianak/restaurant/ayam-geprek-momo-sungai-raya-46f3fe03-cc8c-480b-8f56-5d73a2e56037"
           >
-            <img src="gojek.png" alt="" />
+            <img src="assets/gojek.png" alt="" />
           </a>
           <a
             href="https://www.facebook.com/profile.php?id=425967918230636&paipv=0&eav=AfY0U3Uewl-j6sPhZTGc2iTLnG10Sxvl7u9ibKWVKIN9dumT2e_WXBKrRdQZIq3o3sw&_rdr"
           >
-            <img src="facebook.png" alt="" />
+            <img src="assets/facebook.png" alt="" />
           </a>
         </div>
 
