--- a/index.html
+++ b/index.html
@@ -70,23 +70,22 @@
           <h1>ABOUT</h1>
           <div class="container">
             <p>
+              <div class="gambar">
+                <img src="assets/image2.png" alt="">
+              </div>
+              <div class="isikonten">
+              <strong>Kenapa Harus Momo?</strong> 
+              Karena Momo menyediakan ayam geprek dengan kualitas tinggi, yang murah, dan juga higienis.
+              Geprek Momo mengutamakan kenyamanan dan kepuasan pelanggan.
+              <br>
               <br>
               Geprek Momo menyajikan masakan khas Indonesia dengan sentuhan citarasa
               asia yang terbuat dari daging ayam yang digoreng krispi dan dicampur
-              dengan bumbu geprek yang pedas.
+              dengan bumbu geprek yang pedas. Level kepedasan dari geprek momo juga dapat
+              diatur sesuai selera, mulai dari level 1 - 30 yang merupakan kepedasan maksimal
+              yang di tawarkan oleh geprek momo.
               <br>
-              <br>
-              <strong>Kenapa Harus Momo?</strong> 
-              Karena Momo menyedeiakan ayam geprek dengan kualitas tinggi, yang murah, dan juga higienis.
-              Geprek Momo mengutamakan kenyamanan dan kepuasan pelanggan.
-              
-              <div class="slideshow">
-                <img src="assets/gallery5.png" alt="gallery5" />
-                <img src="assets/gallery1.png" alt="gallery1" />
-                <img src="assets/gallery6.png" alt="gallery6" />
-                <img src="assets/gallery3.png" alt="gallery3" />
-                <img src="assets/gallery4.png" alt="gallery4" />
-              </div>
+            </div>
     
             </p>
             </div>
@@ -196,8 +195,16 @@
       <div class="map">
 
         <h1>OUR LOCATION</h1>
+        <p id = "cabang1" >Cabang 1</p>
+        <br>
+        <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.8150305734725!2d109.36445241413519!3d-0.07357729994631336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1d5a033e086e33%3A0xd3399c33e4132679!2sAyam%20Geprek%20Momo!5e0!3m2!1sid!2sid!4v1679211833097!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="maps"></iframe>
+        <p id = "cabang2" >Cabang 2</p>
+        <br>
+        <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.81762766071!2d109.34139121475333!3d-0.03376199997536341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1d596d4221c917%3A0xe3c747a8b3fe3feb!2sAyam%20Geprek%20Momo%20Ketapang!5e0!3m2!1sid!2sid!4v1679581998806!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
+
     </main>
 
     <footer class="foot" id="contact">
@@ -212,8 +219,13 @@
       <div class="part2">
         <h2>Address</h2>
         <br />
-        <p>Jl.822 No.91, Sungai Raya, Kec, Sungai Raya,</p>
-        <p>Kabupaten Kubu Raya, Kalimantan Barat</p>
+        <p>Cabang 1</p>
+        <br>
+        <p> Jl.822 No.91, Sungai Raya, Kec, Sungai Raya, 
+        Kabupaten Kubu Raya, Kalimantan Barat</p>
+        <p>Cabang 2</p>
+        <p>Jl. Ketapang No.86d, Benua Melayu Darat, Kec. Pontianak Sel, 
+        Kota Pontianak, Kalimantan Barat 78122</p>
       </div>
 
       <div class="part3">
